Peter commitv2